# ai-artist-pjt

./: .gitignore  ArtistMind_Project.md  Makefile  PLAN.md  README.md  pyproject.toml
api/: main.py
data/datasets/: eval.jsonl  train.jsonl
data/datasets/persona/: eval.jsonl  train.jsonl
data/datasets/safety/: eval.jsonl  train.jsonl
data/datasets/worldview/: eval.jsonl  train.jsonl
evaluation/: metrics.py
memory/: __init__.py  short_term.py
persona/: persona_config.yaml  system_prompt.py  yuri.yaml
safety/: input_filter.py  output_filter.py
serving/: __init__.py  model.py
tests/: test_persona.py  test_safety.py
training/: config.yaml  generate_data.py  train.py
ui/: app.py
